# hotelling-abm

./: .gitignore  Makefile  pyproject.toml
hotelling-mesa/: Hotelling.py  Shop.py
notebooks/exploratory/: mesa-tutorial.ipynb
notebooks/reports/: introductory-tutorial.ipynb
